# barvikron

./: .binder-requirements.txt  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  index.ipynb  pyproject.toml  setup.py
.github/workflows/: ci.yml
barvikron/: __init__.py  __main__.py  barvinok.py  findiff.py  kronecker.py  latte.py  parfun.py
barvikron/scripts/: __init__.py  parallel.py  serial.py
tests/: conftest.py  test_findiff.py  test_hello_world.py  test_kronecker.py  test_parfun.py
